Fix blogpost header image overflow. #14

--- a/_sass/custom/styles/_blogpost.scss
+++ b/_sass/custom/styles/_blogpost.scss
@@ -4,6 +4,11 @@
 // Styles for the blog post layout.
 //
 
+div.blogpost-header {
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+
 div.chip {
   background-color: $gray-400;
   height: $chip-size;
@@ -11,7 +16,6 @@ div.chip {
   padding: 0 ($chip-size / 2);
   border-radius: 25px;
   line-height: $chip-size;
-  margin-right: 10px;
 }
 
 div.chip img {
